--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 				<a href="#" class="year btn btn-default" id="btn-1">map</a>
 				<a href="#" class="year btn btn-default" id="btn-2">pie</a>
 				<a href="#" class="year btn btn-default" id="btn-3">line</a>
+				<a href="#" class="year btn btn-default" id="btn-4">circlebars</a>
 			</div>
             <div class="canvas" id="plot"></div>
 
