commit before implementing re-nested data to sep cities and metro areas

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 				<a href="#" class="year btn btn-default" id="btn-2">pie</a>
 				<a href="#" class="year btn btn-default" id="btn-3">line</a>
 				<a href="#" class="year btn btn-default" id="btn-4">circlebars</a>
+				<a href="#" class="year btn btn-default" id="btn-5">averagebubbles</a>
 			</div>
             <div class="canvas" id="plot"></div>
 
