multiple pies working, still needs sort and object constancy - better way to bind?

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 				<a href="#" class="year btn btn-default" id="btn-2">pie</a>
 				<a href="#" class="year btn btn-default" id="btn-3">line</a>
 				<a href="#" class="year btn btn-default" id="btn-4">circlebars</a>
-				<a href="#" class="year btn btn-default" id="btn-5">averagebubbles</a>
+				<a href="#" class="year btn btn-default" id="btn-5">scaledbubbles</a>
+				<a href="#" class="year btn btn-default" id="btn-6">metrobubbles</a>
 			</div>
             <div class="canvas" id="plot"></div>
 
