multiple pies working, need object and color constancy

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 				<a href="#" class="year btn btn-default" id="btn-4">circlebars</a>
 				<a href="#" class="year btn btn-default" id="btn-5">scaledbubbles</a>
 				<a href="#" class="year btn btn-default" id="btn-6">metrobubbles</a>
+				<a href="#" class="year btn btn-default" id="btn-7">manypies</a>
 			</div>
             <div class="canvas" id="plot"></div>
 
