city and metrobubbles working, except for scale - need to fix group translations

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <h1>Final Project</h1>
             <h2>Erica Gunn</h2>
 			<div class="btn-group controls">
-				<a href="#" class="year btn btn-default" id="btn-1">map</a>
-				<a href="#" class="year btn btn-default" id="btn-2">pie</a>
+				<a href="#" class="year btn btn-default" id="btn-1">blank</a>
+				<a href="#" class="year btn btn-default" id="btn-2">blank</a>
 				<a href="#" class="year btn btn-default" id="btn-3">line</a>
 				<a href="#" class="year btn btn-default" id="btn-4">circlebars</a>
 				<a href="#" class="year btn btn-default" id="btn-5">scaledbubbles</a>
