transitions mostly working, need to be staged. Code simplified to remove old functions

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 			<div class="btn-group controls">
 				<a href="#" class="year btn btn-default" id="btn-1">blank</a>
 				<a href="#" class="year btn btn-default" id="btn-2">blank</a>
-				<a href="#" class="year btn btn-default" id="btn-3">line</a>
-				<a href="#" class="year btn btn-default" id="btn-4">circlebars</a>
-				<a href="#" class="year btn btn-default" id="btn-5">scaledbubbles</a>
+				<a href="#" class="year btn btn-default" id="btn-3">blank</a>
+				<a href="#" class="year btn btn-default" id="btn-4">blank</a>
+				<a href="#" class="year btn btn-default" id="btn-5">blank</a>
 				<a href="#" class="year btn btn-default" id="btn-6">metrobubbles</a>
 				<a href="#" class="year btn btn-default" id="btn-7">manypies</a>
 			</div>
