transitions working (except final pies), refactored to stacked functions

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<div class="container">
-            <h1>Final Project</h1>
+            <h1>VisComm Final Project 2015</h1>
             <h2>Erica Gunn</h2>
 			<div class="btn-group controls">
 				<a href="#" class="year btn btn-default" id="btn-1">blank</a>
