--- a/index.html
+++ b/index.html
@@ -9,16 +9,14 @@
 	</head>
 	<body>
 		<div class="container">
-            <h1>VisComm Final Project 2015</h1>
+            <h1>VisTech Final Project 2015</h1>
             <h2>Erica Gunn</h2>
 			<div class="btn-group controls">
-				<a href="#" class="year btn btn-default" id="btn-1">blank</a>
-				<a href="#" class="year btn btn-default" id="btn-2">blank</a>
-				<a href="#" class="year btn btn-default" id="btn-3">blank</a>
-				<a href="#" class="year btn btn-default" id="btn-4">blank</a>
-				<a href="#" class="year btn btn-default" id="btn-5">blank</a>
-				<a href="#" class="year btn btn-default" id="btn-6">metrobubbles</a>
-				<a href="#" class="year btn btn-default" id="btn-7">manypies</a>
+				<a href="#" class="year btn btn-default" id="btn-1">Average commute time</a>
+				<a href="#" class="year btn btn-default" id="btn-2">Commute distribution</a>
+				<a href="#" class="year btn btn-default" id="btn-3">Metro area</a>
+				<a href="#" class="year btn btn-default" id="btn-4">Transit Types</a>
+				<a href="#" class="year btn btn-default" id="btn-5">Transit Distribution</a>
 			</div>
             <div class="canvas" id="plot"></div>
 
